# airac-cc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
airac_tools/: cycle.py  utils.py
src/airac_tools/: cycle.py
tests/: test_core_3.py  tests_core.py
